tests/baselines/reference/declFileTypeAnnotationParenType(strict=true).errors.txt
declFileTypeAnnotationParenType.ts(2,13): error TS2564: Property 'p' has no initializer and is not definitely assigned in the constructor.


==== declFileTypeAnnotationParenType.ts (1 errors) ====
    class c {
        private p: string;
                ~
!!! error TS2564: Property 'p' has no initializer and is not definitely assigned in the constructor.
    }
    
    var x: (() => c)[] = [() => new c()];
    var y = [() => new c()];
    
    var k: (() => c) | string = (() => new c()) || "";
    var l = (() => new c()) || "";